GCP/firewall.tf
resource "google_compute_firewall" "allow_http" {
  name = "http"
  network = "default"
  
  allow {
    protocol = "tcp"
    ports    = ["80"]
  }

target_tags = ["allow-http"] 
}


resource "google_compute_firewall" "allow_https" {
  name = "https"
  network = "default"

  allow {
    protocol = "tcp"
    ports    = ["443"]
  }

  target_tags = ["allow-https"]
}
